# spi-time-series

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  run_classification_experiments.ps1  run_regression_experiments.ps1
.github/workflows/: tests.yml
.pre-commit-data/: cspell-words.txt  cspell.json
configs/: ablation_classification_log.yaml  ablation_regression_log.yaml  classification.yaml  classification_dev.yaml  classification_dummy.yaml  classification_dummy_dev.yaml  classification_onehot.yaml  classification_onehot_dev.yaml  classification_with_active_cases.yaml  classification_with_active_cases_dev.yaml  regression.yaml  regression_dev.yaml  regression_dummy.yaml  regression_dummy_dev.yaml  regression_with_active_cases.yaml  regression_with_active_cases_dev.yaml
configs/batch/: regression_with_active_cases.yaml
doc/: assessment_document_requirements.md
doc/milestones/: .gitignore
doc/source/: conf.py  index.rst  usage.md
experiments/ablation/: ablation_classification_log.yaml  ablation_classification_log_hgb.yaml  ablation_classification_log_ts.yaml  ablation_regression_log.yaml  ablation_regression_log_hgb.yaml  ablation_regression_log_ts.yaml
experiments/classification/: classification_compare.yaml  classification_hgb_log.yaml  classification_hgb_time_series.yaml  (+3 more)
notebooks/: 00_data_loading.ipynb  01_exploratory_data_analysis.ipynb  02_feature_analysis.ipynb  02_pipeline_walkthrough.ipynb  03_model_evaluation.ipynb  03_pca_variance_analysis.ipynb  ClassificationBaseline.ipynb  EDA.ipynb  RandomForestRegressor_POC.ipynb  RegressionBaseline.ipynb  baseline_regression.ipynb  download_data.ipynb  feature_extraction.ipynb  pca_variablity.ipynb  pipeline.ipynb
results/: run_config.yaml
tests/: conftest.py  dummy_test.py  test_ablation.py  test_dataset.py  test_log_based_features.py  test_main.py  test_metrics.py  test_plots.py  test_prefix_generation.py  test_preprocess.py  test_shap.py  test_targets.py  test_time_series_features.py  test_trainer.py
(+62 files in other folders)
