[project]
name = "spi-time-series"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
packages = [{ include = "src" }]
dependencies = [
    "pm4py (>=2.7.22.2,<3.0.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "tsfresh (>=0.21.1,<0.22.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.51.0,<0.52.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlflow (>=3.11.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "r4pm (>=0.5.5,<0.6.0)",
    "polars (>=1.40.1,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=7.1.0,<8.0.0"


[tool.pytest.ini_options]
markers = [
    "integration: tests that make real network or filesystem calls (deselect with '-m not integration')",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py312"
line-length = 80
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true

# Helps with scientific stack (pandas/numpy/etc.)
ignore_missing_imports = true

# Your package root
mypy_path = "src"